VERSION 1.0.0
------------------------
   o First release





VERSION 0.99.0
------------------------
   o Commited to the Bioconductor



VERSION 0.0.3
------------------------
   o

VERSION 0.0.2
------------------------
   o break when common sigma value has error
   o common sigma value

VERSION 0.0.1
------------------------
   o First version