@@ -12,9 +12,10 @@ VERSION 0.99.0
 
 
 
+
 VERSION 0.0.3
 ------------------------
-   o
+   o P-values against all rejected genes
 
 VERSION 0.0.2
 ------------------------
